# llms-from-scratch

./: .env.example  .gitignore  01-tokenization.ipynb  02-tinyllm.ipynb  03-advancing-our-llm.ipynb  04-data.ipynb  05-scaling-laws.ipynb  06-pretraining.ipynb  07-supervised-finetuning.ipynb  08-rlhf-alignment.ipynb  08-rlhf-verifiable-domains.ipynb  09-lora-rlvr.ipynb  10-pruning-distillation.ipynb  11-appendix-position-embeddings.ipynb  12-appendix-quantisation.ipynb  13-appendix-peft.ipynb  README.md  _config.yml  _toc.yml  pyproject.toml  requirements.txt  test-model.ipynb
.github/workflows/: deploy-book.yml
data/: sorting_cold_start.jsonl  sorting_synthetic_test.jsonl  sorting_synthetic_training.jsonl
pages/: 01-tokenization.html  02-tinyllm.html  03-advancing-our-llm.html  04-data.html  05-scaling-laws.html  06-pretraining.html  07-supervised-finetuning.html  08-rlhf-alignment.html  10-pruning-distillation.html  11-appendix-position-embeddings.html  12-appendix-quantisation.html  13-appendix-peft.html  create_pages.sh
src/: kvcache.py  mla.py  moe.py  rmsnorm.py  rope.py  shraygpt.py  swiglu.py
