[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "plotly[express]>=6.3.1",
    "rich>=14.1.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "trl>=0.24.0",
]
